2012-06-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packForPush),
	* src/ds390/ralloc.c (packForPush),
	* src/hc08/ralloc.c (packForPush),
	* src/pic14/ralloc.c (packForPush),
	* src/pic16/ralloc.c (packForPush): fixed bug #3527285

2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix corner case in addition with extended stack right operand and low result byte in hl.

2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Disallow use of hl over comparison when there is an extended stack operand. Partial fix for bug #3531660.
	* src/z80/gen.c:
	  Save a during GET_VALUE_AT_ADDRESS when storing to extended stack operand. Partial fix for bug #3531660.

2012-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (loadRegIndex, storeRegIndexed): added missing
	  rematOfs

2012-06-03 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/main.c, src/pic16/main.c: re-enabled deprecated
	  macros not starting with double underscore characters in
	  combination with --std-cXX
	* device/include/pic16/pic18fregs.h: modified for __SDCC_PICXXX

2012-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix handling of extended stack operands in 16-bit unary minus and signed comparison.

2012-06-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c,
	* src/hc08/ralloc.c: RFE 3526269 and 3526268

2012-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h:
	  Fixed bug #3531540.

2012-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c, src/SDCCerr.h: added W_STRING_CANNOT_BE_TERMINATED
	  src/SDCCast.c (createIvalCharPtr): fixed #3007799: generate different warning
	  for initializer strings that fit in buffer without terminating '\0'. Accordding
	  C99 $6.7.8:14 this is allowed. With --less-pedantic no warning is generated.
	  Modified version of patch by Jan Waclawek.
